syntax = "proto3";

import "google/protobuf/timestamp.proto";

service IpcCore {
  rpc sendMessage (SendMessageRequest) returns (SendMessageResponse) {}
  rpc subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
}

message SendMessageRequest {
  string message = 1;
  // TODO(1) replace by interceptor
  bytes temporaryIdentifier = 2;
}

message SendMessageResponse {}

message SubscribeRequest {}

message SubscribeResponse {
  repeated Message messages = 1;
}

message Message {
  bytes source = 1;
  string message = 2;
  google.protobuf.Timestamp created_at = 3;
}